--- a/app.css
+++ b/app.css
@@ -41,28 +41,28 @@ input[type="search"] {
   -webkit-transition: border-color ease-in-out 0.3s;
   -o-transition: border-color ease-in-out 0.3s;
   transition: border-color ease-in-out 0.3s; }
-  .q9-form-control:hover {
-    border-color: #ccd3d6; }
-  .q9-form-control:focus {
-    border-color: #00abfb;
-    outline: 0; }
-    .q9-form-control:focus + .q9-help-msg {
-      color: #00abfb; }
-  .q9-form-control::-moz-placeholder {
-    color: #d5dbdd;
-    opacity: 1; }
-  .q9-form-control:-ms-input-placeholder {
-    color: #d5dbdd; }
-  .q9-form-control::-webkit-input-placeholder {
-    color: #d5dbdd; }
-  .q9-form-control[disabled], .q9-form-control[readonly],
-  fieldset[disabled] .q9-form-control {
-    background-color: #fafbfb;
-    border-color: #ccd3d6;
-    opacity: 1; }
-  .q9-form-control[disabled],
-  fieldset[disabled] .q9-form-control {
-    cursor: not-allowed; }
+.q9-form-control:hover {
+  border-color: #ccd3d6; }
+.q9-form-control:focus {
+  border-color: #00abfb;
+  outline: 0; }
+.q9-form-control:focus + .q9-help-msg {
+  color: #00abfb; }
+.q9-form-control::-moz-placeholder {
+  color: #d5dbdd;
+  opacity: 1; }
+.q9-form-control:-ms-input-placeholder {
+  color: #d5dbdd; }
+.q9-form-control::-webkit-input-placeholder {
+  color: #d5dbdd; }
+.q9-form-control[disabled], .q9-form-control[readonly],
+fieldset[disabled] .q9-form-control {
+  background-color: #fafbfb;
+  border-color: #ccd3d6;
+  opacity: 1; }
+.q9-form-control[disabled],
+fieldset[disabled] .q9-form-control {
+  cursor: not-allowed; }
 
 .q9-form-group {
   margin-bottom: 16px;
@@ -159,9 +159,8 @@ input[type="search"] {
   touch-action: manipulation;
   cursor: pointer;
   border-radius: 4px;
-  background-color: #00abfb;
   background-image: none;
-  border: 1px solid #00abfb;
+  border: 1px solid transparent;
   white-space: nowrap;
   letter-spacing: .5px;
   outline: 0;
@@ -172,55 +171,114 @@ input[type="search"] {
   -webkit-transition: border-color ease-in-out 0.3s, background-color ease-in-out 0.3s, color ease-in-out 0.3s;
   -o-transition: border-color ease-in-out 0.3s, background-color ease-in-out 0.3s, color ease-in-out 0.3s;
   transition: border-color ease-in-out 0.3s, background-color ease-in-out 0.3s, color ease-in-out 0.3s; }
-  .q9-btn:hover, .q9-btn:focus, .q9-btn.focus {
-    background-color: #19b3fb;
-    color: #fff;
-    text-decoration: none; }
-  .q9-btn:active, .q9-btn.active {
-    background-color: #0099e1;
-    color: #fff; }
-  .q9-btn.disabled, .q9-btn[disabled],
-  fieldset[disabled] .q9-btn {
-    background-color: #d5dbdd;
-    border-color: #d5dbdd;
-    cursor: not-allowed; }
+.q9-btn:hover, .q9-btn:focus, .q9-btn.focus {
+  background-color: #19b3fb;
+  color: #fff;
+  text-decoration: none; }
+.q9-btn:active, .q9-btn.active {
+  background-color: #0099e1;
+  color: #fff; }
+.q9-btn.disabled, .q9-btn[disabled],
+fieldset[disabled] .q9-btn {
+  cursor: not-allowed; }
 
 a.btn.disabled,
 fieldset[disabled] a.btn {
   pointer-events: none; }
 
-.q9-btn.q9-btn-light {
-  background-color: #fff;
-  color: #00abfb; }
-  .q9-btn.q9-btn-light:hover, .q9-btn.q9-btn-light:focus, .q9-btn.q9-btn-light.focus {
-    background-color: #19b3fb;
-    color: #fff;
-    text-decoration: none; }
-  .q9-btn.q9-btn-light:active, .q9-btn.q9-btn-light.active {
-    background-color: #0099e1;
-    color: #fff; }
-  .q9-btn.q9-btn-light.disabled, .q9-btn.q9-btn-light[disabled],
-  fieldset[disabled] .q9-btn.q9-btn-light {
-    background-color: #fff;
-    border-color: #d5dbdd;
-    color: #d5dbdd; }
+.q9-btn-default {
+  background-color: #00abfb;
+  border-color: #00abfb;
+  color: #fff; }
+.q9-btn-default:hover, .q9-btn-default:focus, .q9-btn-default.focus {
+  background-color: #19b3fb;
+  border-color: #19b3fb; }
+.q9-btn-default:active, .q9-btn-default.active {
+  background-color: #0099e1;
+  border-color: #0099e1; }
 
-.q9-btn.q9-btn-danger {
+.q9-btn-danger {
   background-color: #ff4c63;
   border-color: #ff4c63;
   color: #fff; }
-  .q9-btn.q9-btn-danger:hover, .q9-btn.q9-btn-danger:focus, .q9-btn.q9-btn-danger.focus {
-    background-color: #ff5d72;
-    border-color: #ff5d72;
-    text-decoration: none; }
-  .q9-btn.q9-btn-danger:active, .q9-btn.q9-btn-danger.active {
-    background-color: #e54459;
-    border-color: #e54459; }
-  .q9-btn.q9-btn-danger.disabled, .q9-btn.q9-btn-danger[disabled],
-  fieldset[disabled] .q9-btn.q9-btn-danger {
-    background-color: #d5dbdd;
-    border-color: #d5dbdd;
-    color: #fff; }
+.q9-btn-danger:hover, .q9-btn-danger:focus, .q9-btn-danger.focus {
+  background-color: #ff5d72;
+  border-color: #ff5d72; }
+.q9-btn-danger:active, .q9-btn-danger.active {
+  background-color: #e54459;
+  border-color: #e54459; }
+
+.q9-btn-success {
+  background-color: #58cb03;
+  border-color: #58cb03;
+  color: #fff; }
+.q9-btn-success:hover, .q9-btn-success:focus, .q9-btn-success.focus {
+  background-color: #68d01d;
+  border-color: #68d01d; }
+.q9-btn-success:active, .q9-btn-success.active {
+  background-color: #4fb603;
+  border-color: #4fb603; }
+
+.q9-btn-default.disabled, .q9-btn-default[disabled],
+fieldset[disabled] .q9-btn-default,
+.q9-btn-danger.disabled,
+.q9-btn-danger[disabled],
+fieldset[disabled]
+.q9-btn-danger,
+.q9-btn-success.disabled,
+.q9-btn-success[disabled],
+fieldset[disabled]
+.q9-btn-success {
+  background-color: #d5dbdd;
+  border-color: #d5dbdd;
+  color: #fff; }
+
+.q9-btn-default-light {
+  border-color: #00abfb;
+  background-color: #fff;
+  color: #00abfb; }
+.q9-btn-default-light:hover, .q9-btn-default-light:focus, .q9-btn-default-light.focus {
+  background-color: #19b3fb;
+  color: #fff; }
+.q9-btn-default-light:active, .q9-btn-default-light.active {
+  background-color: #0099e1;
+  color: #fff; }
+
+.q9-btn-danger-light {
+  border-color: #ff4c63;
+  background-color: #fff;
+  color: #ff4c63; }
+.q9-btn-danger-light:hover, .q9-btn-danger-light:focus, .q9-btn-danger-light.focus {
+  background-color: #ff5d72;
+  color: #fff; }
+.q9-btn-danger-light:active, .q9-btn-danger-light.active {
+  background-color: #e54459;
+  color: #fff; }
+
+.q9-btn-success-light {
+  border-color: #58cb03;
+  background-color: #fff;
+  color: #58cb03; }
+.q9-btn-success-light:hover, .q9-btn-success-light:focus, .q9-btn-success-light.focus {
+  background-color: #68d01d;
+  color: #fff; }
+.q9-btn-success-light:active, .q9-btn-success-light.active {
+  background-color: #4fb603;
+  color: #fff; }
+
+.q9-btn-default-light.disabled, .q9-btn-default-light[disabled],
+fieldset[disabled] .q9-btn-default-light,
+.q9-btn-danger-light.disabled,
+.q9-btn-danger-light[disabled],
+fieldset[disabled]
+.q9-btn-danger-light,
+.q9-btn-success-light.disabled,
+.q9-btn-success-light[disabled],
+fieldset[disabled]
+.q9-btn-success-light {
+  background-color: #fff;
+  border-color: #d5dbdd;
+  color: #d5dbdd; }
 
 .q9-btn.q9-btn-sm {
   padding: 8px 16px;
