--- a/app.scss
+++ b/app.scss
@@ -16,9 +16,9 @@ $error-color-dark: #e54459;
 
 $text-color: #2e4a57;
 
-$inactive-color: #d5dbdd;
-$inactive-color-light: #fafbfb;
-$inactive-color-dark: #ccd3d6;
+$inactive-color: #dce1e4;
+$inactive-color-light: #f9fAfA;
+$inactive-color-dark: #c0c8cc;
 
 $background-color: #fff;
 
@@ -91,12 +91,13 @@ input[type="search"] {
 // input[type="url"]
 // input[type="search"]
 // input[type="tel"]
+// textarea
 
 .q9-form-control {
   display: block;
   width: 100%;
   height: 30px; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
-  padding: 10px;
+  padding: 5px 10px;
   font-size: 14px;
   line-height: 20px;
   color: $text-color;
@@ -139,6 +140,11 @@ input[type="search"] {
   fieldset[disabled] & {
     cursor: not-allowed;
   }
+}
+
+// Reset height for `textarea`s
+textarea.q9-form-control {
+  height: auto;
 }
 
 // Form elements
@@ -237,14 +243,16 @@ input[type="search"] {
   font-weight: 700;
   line-height: 1;
   color: #fff;
-  text-transform: uppercase;
   text-align: center;
+  text-transform: uppercase;
   vertical-align: middle;
   touch-action: manipulation;
   cursor: pointer;
   border-radius: 4px;
+  //background-color: $main-app-color;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid transparent;
+  //border-color: $main-app-color;
   white-space: nowrap;
   letter-spacing: .5px;
   outline: 0;
@@ -258,19 +266,16 @@ input[type="search"] {
     color: #fff;
     text-decoration: none;
   }
-
   &:active,
   &.active {
     background-color: $main-app-color-dark;
     color: #fff;
   }
-
   &.disabled,
   &[disabled],
   fieldset[disabled] & {
     cursor: not-allowed;
   }
-
   // [converter] extracted a& to a.btn
 }
 
@@ -285,35 +290,28 @@ a.btn {
 .q9-btn-default {
   background-color: $main-app-color;
   border-color: $main-app-color;
-  color: #fff;
-
   &:hover,
   &:focus,
   &.focus {
     background-color: $main-app-color-light;
     border-color:  $main-app-color-light;
   }
-
   &:active,
   &.active {
     background-color:  $main-app-color-dark;
     border-color:  $main-app-color-dark;
   }
-
 }
 
 .q9-btn-danger {
   background-color: $error-color;
   border-color: $error-color;
-  color: #fff;
-
   &:hover,
   &:focus,
   &.focus {
     background-color: $error-color-light;
     border-color: $error-color-light;
   }
-
   &:active,
   &.active {
     background-color: $error-color-dark;
@@ -324,15 +322,12 @@ a.btn {
 .q9-btn-success {
   background-color: $success-color;
   border-color: $success-color;
-  color: #fff;
-
   &:hover,
   &:focus,
   &.focus {
     background-color: $success-color-light;
     border-color: $success-color-light;
   }
-
   &:active,
   &.active {
     background-color: $success-color-dark;
@@ -343,6 +338,7 @@ a.btn {
 .q9-btn-default,
 .q9-btn-danger,
 .q9-btn-success {
+  color: #fff;
   &.disabled,
   &[disabled],
   fieldset[disabled] & {
@@ -357,15 +353,12 @@ a.btn {
   border-color: $main-app-color;
   background-color: #fff;
   color: $main-app-color;
-
   &:hover,
   &:focus,
   &.focus {
     background-color: $main-app-color-light;
     color: #fff;
-
   }
-
   &:active,
   &.active {
     background-color: $main-app-color-dark;
@@ -377,15 +370,12 @@ a.btn {
   border-color: $error-color;
   background-color: #fff;
   color: $error-color;
-
   &:hover,
   &:focus,
   &.focus {
     background-color: $error-color-light;
     color: #fff;
-
   }
-
   &:active,
   &.active {
     background-color: $error-color-dark;
@@ -397,14 +387,12 @@ a.btn {
   border-color: $success-color;
   background-color: #fff;
   color: $success-color;
-
   &:hover,
   &:focus,
   &.focus {
     background-color: $success-color-light;
     color: #fff;
   }
-
   &:active,
   &.active {
     background-color: $success-color-dark;
@@ -430,9 +418,72 @@ a.btn {
     padding: 8px 16px;
     font-weight: 500;
     letter-spacing: normal;
+    text-transform: none;
   }
   &.q9-btn-full-width {
     display: block;
     width: 100%;
   }
+}
+
+
+// Tabs
+// --------------------------------------------------
+.q9-tabset {
+  .nav-tabs {
+    border-bottom: 1px solid $inactive-color;
+    > li {
+      position: relative;
+      margin-bottom: 0;
+      outline: none;
+      border: none;
+      &:hover > a {
+        color: $main-app-color-dark;
+        border: none;
+      }
+      &.disabled > a {
+        color: $inactive-color;
+      }
+      &.active > a {
+        color: $main-app-color-dark;
+        &:after {
+          width: 100%;
+          left: 0;
+          right: 0;
+        }
+      }
+      > a {
+        margin-right: 0;
+        padding: 11px 14px;
+        font-size: 13px;
+        line-height: 17px;
+        color: $inactive-color-dark;
+        border: none;
+        background-color: transparent;
+        text-transform: uppercase;
+        outline: none;
+        cursor: pointer;
+        @include transition(color, 0.3s, ease-in, 0s);
+        &:after {
+          content: '';
+          display: block;
+          width: 0;
+          height: 2px;
+          position: absolute;
+          bottom: -1px;
+          left: 50%;
+          right: 50%;
+          background-color: $main-app-color;
+          @include transition(all, 0.4s, ease-in, 0s);
+        }
+        &:visited,
+        &:active,
+        &:focus,
+        &:hover {
+          border: none;
+        }
+      }
+    }
+  }
+
 }
