--- a/app.scss
+++ b/app.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i');
-
 // Variables
 // --------------------------------------------------
 $main-app-color: #00abfb;
@@ -22,7 +20,7 @@ $inactive-color-dark: #c0c8cc;
 
 $background-color: #fff;
 
-$font-family-main: 'Roboto', sans-serif;
+$font-family-main: inherit;
 
 // Mixins
 // --------------------------------------------------
@@ -57,7 +55,7 @@ $font-family-main: 'Roboto', sans-serif;
 fieldset {
   padding: 0;
   margin: 0;
-  border: 0;
+  border: none;
   min-width: 0;
 }
 legend {
@@ -68,7 +66,7 @@ legend {
   font-size: 21px;
   line-height: inherit;
   color: #333333;
-  border: 0;
+  border: none;
   border-bottom: 1px solid #e5e5e5;
 }
 label {
@@ -106,6 +104,7 @@ input[type="search"] {
   border: 1px solid #d5dbdd;
   border-radius: 3px; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
   text-overflow: ellipsis;
+  -webkit-font-smoothing: antialiased;
   @include transition(border-color ease-in-out .3s);
 
   &:hover {
@@ -113,7 +112,7 @@ input[type="search"] {
   }
 
   &:focus {
-    border-color: $main-app-color;
+    border: 1px solid $main-app-color;
     outline: 0;
     + .q9-help-msg {
       color: $main-app-color;
@@ -145,6 +144,7 @@ input[type="search"] {
 // Reset height for `textarea`s
 textarea.q9-form-control {
   height: auto;
+  resize: vertical;
 }
 
 // Form elements
@@ -192,9 +192,11 @@ textarea.q9-form-control {
   margin-top: 0;
   margin-bottom: 10px;
   color: $text-color;
+  font-family: $font-family-main;
   font-style: normal;
   font-stretch: normal;
   letter-spacing: normal;
+  -webkit-font-smoothing: antialiased;
 }
 .q9-h1 {
   font-size: 22px;
@@ -239,6 +241,7 @@ textarea.q9-form-control {
   display: inline-block;
   margin-bottom: 0; // For input.btn
   padding: 14px;
+  font-family: $font-family-main;
   font-size: 13px;
   font-weight: 700;
   line-height: 1;
@@ -249,28 +252,21 @@ textarea.q9-form-control {
   touch-action: manipulation;
   cursor: pointer;
   border-radius: 4px;
-  //background-color: $main-app-color;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid transparent;
-  //border-color: $main-app-color;
   white-space: nowrap;
   letter-spacing: .5px;
   outline: 0;
+  -webkit-font-smoothing: antialiased;
   @include user-select(none);
   @include transition(border-color ease-in-out .3s, background-color ease-in-out .3s, color ease-in-out .3s);
 
-  &:hover,
   &:focus,
-  &.focus {
-    background-color: $main-app-color-light;
-    color: #fff;
+  &:hover{
     text-decoration: none;
+    outline: 0;
   }
-  &:active,
-  &.active {
-    background-color: $main-app-color-dark;
-    color: #fff;
-  }
+
   &.disabled,
   &[disabled],
   fieldset[disabled] & {
@@ -290,48 +286,60 @@ a.btn {
 .q9-btn-default {
   background-color: $main-app-color;
   border-color: $main-app-color;
-  &:hover,
-  &:focus,
-  &.focus {
+  color: #fff;
+  &:hover {
     background-color: $main-app-color-light;
     border-color:  $main-app-color-light;
+    color: #fff;
+  }
+  &:focus {
+    color: #fff;
   }
   &:active,
   &.active {
     background-color:  $main-app-color-dark;
     border-color:  $main-app-color-dark;
+    color: #fff;
   }
 }
 
 .q9-btn-danger {
   background-color: $error-color;
   border-color: $error-color;
-  &:hover,
-  &:focus,
-  &.focus {
+  color: #fff;
+  &:hover {
     background-color: $error-color-light;
     border-color: $error-color-light;
+    color: #fff;
+  }
+  &:focus {
+    color: #fff;
   }
   &:active,
   &.active {
     background-color: $error-color-dark;
     border-color: $error-color-dark;
+    color: #fff;
   }
 }
 
 .q9-btn-success {
   background-color: $success-color;
   border-color: $success-color;
-  &:hover,
-  &:focus,
-  &.focus {
+  color: #fff;
+  &:hover {
     background-color: $success-color-light;
     border-color: $success-color-light;
+    color: #fff;
+  }
+  &:focus {
+    color: #fff;
   }
   &:active,
   &.active {
     background-color: $success-color-dark;
     border-color: $success-color-dark;
+    color: #fff;
   }
 }
 
@@ -339,6 +347,7 @@ a.btn {
 .q9-btn-danger,
 .q9-btn-success {
   color: #fff;
+  text-decoration: none;
   &.disabled,
   &[disabled],
   fieldset[disabled] & {
@@ -351,11 +360,12 @@ a.btn {
 //Button colors light
 .q9-btn-default-light {
   border-color: $main-app-color;
-  background-color: #fff;
+  background-color: transparent;
   color: $main-app-color;
-  &:hover,
-  &:focus,
-  &.focus {
+  &:focus {
+    color: $main-app-color;
+  }
+  &:hover {
     background-color: $main-app-color-light;
     color: #fff;
   }
@@ -368,11 +378,12 @@ a.btn {
 
 .q9-btn-danger-light {
   border-color: $error-color;
-  background-color: #fff;
+  background-color: transparent;
   color: $error-color;
-  &:hover,
-  &:focus,
-  &.focus {
+  &:focus {
+    color: $error-color;
+  }
+  &:hover {
     background-color: $error-color-light;
     color: #fff;
   }
@@ -385,11 +396,12 @@ a.btn {
 
 .q9-btn-success-light {
   border-color: $success-color;
-  background-color: #fff;
+  background-color: transparent;
   color: $success-color;
-  &:hover,
-  &:focus,
-  &.focus {
+  &:focus {
+    color: $success-color;
+  }
+  &:hover {
     background-color: $success-color-light;
     color: #fff;
   }
@@ -406,7 +418,7 @@ a.btn {
   &.disabled,
   &[disabled],
   fieldset[disabled] & {
-    background-color: #fff;
+    background-color: transparent;
     border-color: $inactive-color;
     color: $inactive-color;
   }
@@ -430,6 +442,7 @@ a.btn {
 // Tabs
 // --------------------------------------------------
 .q9-tabset {
+  -webkit-font-smoothing: antialiased;
   .nav-tabs {
     border-bottom: 1px solid $inactive-color;
     > li {
@@ -440,12 +453,20 @@ a.btn {
       &:hover > a {
         color: $main-app-color-dark;
         border: none;
+        background-color: #fff;
       }
       &.disabled > a {
         color: $inactive-color;
       }
       &.active > a {
         color: $main-app-color-dark;
+        border: none;
+        &:active,
+        &:hover,
+        &:focus {
+          color: $main-app-color-dark;
+          border: none;
+        }
         &:after {
           width: 100%;
           left: 0;
@@ -481,6 +502,7 @@ a.btn {
         &:focus,
         &:hover {
           border: none;
+
         }
       }
     }
