--- a/app.scss
+++ b/app.scss
@@ -97,7 +97,7 @@ input[type="search"] {
   height: 30px; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
   padding: 5px 10px;
   font-size: 14px;
-  line-height: 20px;
+  line-height: 18px;
   color: $text-color;
   background-color: $background-color;
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
@@ -240,7 +240,7 @@ textarea.q9-form-control {
 .q9-btn {
   display: inline-block;
   margin-bottom: 0; // For input.btn
-  padding: 14px;
+  padding: 13px 14px 12px;
   font-family: $font-family-main;
   font-size: 13px;
   font-weight: 700;
@@ -439,7 +439,7 @@ a.btn {
 // Button Sizes
 .q9-btn {
   &.q9-btn-sm {
-    padding: 8px 16px;
+    padding: 8px 16px 7px;
     font-weight: 500;
     letter-spacing: normal;
     text-transform: none;
